[project]
name = "linuxplay"
version = "0.1.0"
description = "Ultra low latency remote desktop and game streaming for Linux"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Techlm77", email = "techlm77@users.noreply.github.com"}
]
keywords = ["remote-desktop", "streaming", "low-latency", "ffmpeg", "udp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Capture",
]

dependencies = [
    "PyQt5>=5.15.0",
    "PyOpenGL>=3.1.6",
    "PyOpenGL-accelerate>=3.1.6",
    "av>=10.0.0",
    "numpy>=1.21.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
    "evdev>=1.6.0; sys_platform == 'linux'",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
linuxplay = "start:main"
linuxplay-host = "host:main"
linuxplay-client = "client:main"

[project.urls]
Homepage = "https://github.com/bjornjorgensen/LinuxPlay"
Repository = "https://github.com/bjornjorgensen/LinuxPlay"
Issues = "https://github.com/bjornjorgensen/LinuxPlay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "N802",    # function name should be lowercase (Qt conventions)
    "N803",    # argument name should be lowercase (Qt conventions)
    "N806",    # variable in function should be lowercase (Qt conventions)
    "B008",    # do not perform function calls in argument defaults
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["linuxplay"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]
